Fix horizontal scrolling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,9 @@
   --theme: #43883fff;
 }
 
-body {
+html, body {
   font-family: 'Lato', sans-serif;
-  width: 100vw;
+  max-width: 100%;
   overflow-x: hidden;
 }
 
@@ -17,7 +17,7 @@ NAVBAR
   left: 0;
   background-color: var(--theme);
   z-index: 1;
-  width: 100%
+  width: 100%;
 }
 
 .header-img {
@@ -69,7 +69,7 @@ BOXES
 }
 
 .boxes {
-  height: 400px;
+  height: 300px;
   width: 50%;
   margin: 0;
   padding: 10px;
@@ -84,18 +84,19 @@ BOXES
 .boxes h3 {
   font-weight: 700;
   position: relative;
-  top: 70px;
+  top: 30px;
 }
 
 .boxes h5 {
   position: relative;
-  top: 70px;
+  top: 30px;
   line-height: 1;
+  font-size: 1.1em;
 }
 
 .boxes .btn {
   position: relative;
-  top: 90px;
+  top: 50px;
   border: 2px solid;
 }
 
